--- a/workflows/p3_cluster_create.yaml
+++ b/workflows/p3_cluster_create.yaml
@@ -78,7 +78,7 @@ spec:
           control_plane_nodes: ${{ parameters.control_plane_nodes }}
           ingress_type: ${{ parameters.ingress_type }}
           requestor_name: ${{ user.entity.metadata.name }}
-          requestor_meta_data: ${{ user.entity.metadata }}
+          requestor_meta_data: ${{ json.stringify(user.entity) }}
         apikey: ${{ parameters.token }}
   output:
     links:
