--- a/workflows/create_developer_env.yaml
+++ b/workflows/create_developer_env.yaml
@@ -27,9 +27,9 @@ spec:
         newAppName:
           title: Application Name
           type: string
-          description: Unique name for your new application (max:8 characters)
-          maxLength: 8
-          pattern: '^([a-zA-Z][a-zA-Z0-9]*)(-[a-zA-Z0-9]+)*$'
+          description: Unique name for your new application (max:10 characters)
+          maxLength: 10
+          pattern: '^([a-zA-Z][a-zA-Z0-9]*)(_[a-zA-Z0-9]+)*$'
       dependencies:
         provider:
           allOf:
