--- a/workflows/create_developer_env.yaml
+++ b/workflows/create_developer_env.yaml
@@ -1,5 +1,5 @@
 # Titra - Create Developer Environment
-apiVersion: scaffolder.backstage.io/v1beta3
+apiVersion: backstage.io/v1alpha1
 kind: Template
 metadata:
   name: titra-create-developer-env
