--- a/workflows/create_developer_env.yaml
+++ b/workflows/create_developer_env.yaml
@@ -84,8 +84,12 @@ spec:
       properties:
         deploy_application:
           title: Deploy Application
-          type: boolean
           description: Deploy application framework on newly provisioned environment (default:true)
+          type: string
+          enum:
+            - true
+            - false
+          ui:widget: radio
           default: true
         application_type:
           title: Application Type
