--- a/workflows/create_developer_env.yaml
+++ b/workflows/create_developer_env.yaml
@@ -87,10 +87,10 @@ spec:
           description: Deploy application framework on newly provisioned environment (default:true)
           type: string
           enum:
-            - "true"
-            - "false"
+            - yes
+            - no
           ui:widget: radio
-          default: "true"
+          default: yes
         application_type:
           title: Application Type
           type: string
