--- a/workflows/sandbox_env_creation.yaml
+++ b/workflows/sandbox_env_creation.yaml
@@ -8,7 +8,7 @@ metadata:
   icon: app-kubernetes
   tags:
     - beta
-    - hidden
+    - demo
 spec:
   owner: user:default/joseph.titra
   type: environment
